<resources>
    <string name="app_name">Hello Toast</string>
    <string name="btn1">TOAST</string>
    <string name="btn2">COUNT</string>
</resources>