...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="412dp"
        android:layout_height="57dp"
        android:background="@color/purple_500"
        android:text="TODO_12"
        android:textColor="@color/white"
        android:textSize="70px"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donut"
        app:layout_constraintVertical_bias="0.233"
        app:srcCompat="@drawable/icecream_3312559_1280" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="287dp"
        android:layout_height="149dp"
        android:text="@string/ice"
        android:textSize="60px"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
...
